# S4CCS

./: .gitignore  CH1_Rx.vi  CH1_Tx.vi  CH2_Rx.vi  CH2_Tx.vi  CH3_Rx.vi  CH3_Tx.vi  CH4_Rx.vi  CH4_Tx.vi  Camera Capabilities.vi  Channel_Manager2.vi  Estados Aquisição de Imagens.dia  GUI_CH1_Tx.vi  README.md  S4ACS_Controller.dia  S4ACS_Controller.vi  SPARC4_AC.aliases  SPARC4_AC.lvlps  SPARC4_AC.lvproj  SPARC4_GEI.vi  SPARC4_GUI.vi  SPARC4__GUI.html  TESTE  TESTE.vi  citation.cff  log.csv  pyproject.toml
CCDCamera/: Abort Acquisition.vi  CCDCamera.lvclass  Calc % Acquired.vi  Calc Currente Exposure Time.vi  Clean CCD.vi  Clean Image.vi  Cooler OFF.vi  Get Acquired Data.vi  Get Cooler Status.vi  Get Image Names in Directory.vi  Get Number New Images.vi  Initialize Camera.vi  Read Binning.vi  Read CCD Config.vi  Read Camera Status.vi  Read Cooler ON_OFF.vi  Read Cooler.lvclass.vi  Read EM Gain.vi  Read EM Mode.vi  Read Exposure Time.vi  Read Final Column.vi  Read Final Line.vi  Read Image Dimensions.vi  Read Image Graph.vi  Read Image Name.vi  Read Image Path.vi  Read Initial Cloumn.vi  Read Initial Line.vi  Read Initialization.vi  Read Input IO Level.vi  Read Kinetic Acquisition Mode.lvclass.vi  Read Kinetic Series Length.vi  Read Pre-amp gain.vi  Read Readout Rate.vi  Read Save in Kinetic Mode.lvclass.vi  Read Shutter Mode.vi  Read Temperature Status.vi  Read Temperature.vi  Read Tempo de espera.vi  Read Trigger.vi  (+47 more)
Channel GUI/: Channel GUI.lvclass  Create RxTx.vi  Create Stream.vi  End.vi  Erase Message.vi  Read ID.vi  Read RxTx.lvclass.vi  Read Stream.lvclass.vi  (+10 more)
(+2785 files in other folders)
