[project]
name = "s4acs"
version = "1.52.5"
description = "SPARC4 Acquisition Control System"
authors = [
    {name = "s"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
astropy = "^7.1.0"
numpy = "^2.2.6"
pandas = "^2.2.3"

